--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,43 @@
     .menu-main a:hover {
       color: #372c48
     }
+
+    .footter-container {
+      width: 100%;
+      height: 86px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      vertical-align: middle;
+      background: #77c1bb;
+      padding: 0;
+      margin: 0;
+
+    }
+
+    .js-footer {
+      width: 180px;
+      list-style: none;
+      display: flex;
+      background: #77c1bb;
+      color: #556270;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+    }
+
+    @media (min-width: 768px) {
+      .js-footer {
+        width: 220px;
+        font-size: 18px;
+      }
+    }
+
+    @media (min-width: 1024px) {
+      .js-footer {
+        width: 250px;
+        font-size: 20px;
+      }
+    }
   </style>
 </head>
 
@@ -49,7 +86,12 @@
   </header>
   <main>
     <div id="pug-div"></div>
+
+    <button class="js-add-to-watched">ADD TO WATCHED</button>
   </main>
+  <footer class="footter-container">
+    <div class="js-footer">Made by GroupName</div>
+  </footer>
 
 </body>
 
