--- a/src/header.html
+++ b/src/header.html
@@ -1,8 +1,8 @@
 <header>
     <nav class="top-menu">
-        <a class="navbar-logo" href=""><img src=""></a>
+        <a class="navbar-logo" href="#"><img src="./images/logoFilm.png"> Filmoteka</a>
         <ul class="menu-main">
-            <li><a href="">HOME</a></li>
-            <li><a href="">MY LIBRARY</a></li>
+            <li class="item-container"><a class="menu-item" href="#">HOME</a></li>
+            <li class="item-container"><a class="menu-item" href="#">MY LIBRARY</a></li>
         </ul>
 </header>
