--- a/src/index.html
+++ b/src/index.html
@@ -11,30 +11,84 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <style>
     .top-menu {
+      width: 100%;
       height: 65px;
       display: flex;
+      align-items: center;
+      justify-content: space-between;
       vertical-align: middle;
       background: #77c1bb;
-      padding-left: 0;
+      padding: 0;
+      margin: 0;
 
     }
 
     .menu-main {
       list-style: none;
+      text-decoration: none;
       display: flex;
+      justify-content: center;
+      vertical-align: middle;
+      align-items: center;
       background: #77c1bb;
       color: #556270;
       font-family: 'Roboto', sans-serif;
       font-size: 18px;
     }
 
+    .item-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      background: #77c1bb;
+      color: #556270;
+      text-decoration: none;
+      width: 120px;
+      padding: 0px;
+      height: 55px;
+    }
+
+    .menu-item {
+      list-style: none;
+      text-decoration: none;
+      font-size: 18px;
+      color: #556270;
+    }
+
+    .item-container:hover {
+      border-bottom: 3px solid #556270;
+    }
+
+    .menu-item.active {
+      border-bottom: 3px solid #556270;
+    }
+
     .navbar-logo {
-      color: #372c48;
+      list-style: none;
+      text-decoration: none;
+      margin: 30px;
+      font-size: 0px;
     }
 
     .menu-main a:hover {
       color: #372c48
     }
+
+    @media (min-width: 768px) {
+      .navbar-logo {
+        color: #372c48;
+        font-size: 18px;
+      }
+    }
+
+    @media (min-width: 1024px) {
+      .navbar-logo {
+        color: #372c48;
+        font-size: 18px;
+      }
+    }
+
 
     .footter-container {
       width: 100%;
@@ -78,10 +132,10 @@
 <body>
   <header>
     <nav class="top-menu">
-      <a class="navbar-logo" href="#"><img src="./images/logoFilm.png"></a>
+      <a class="navbar-logo" href="#"><img src="./images/logoFilm.png"> Filmoteka</a>
       <ul class="menu-main">
-        <li><a href="">HOME</a></li>
-        <li><a href="">MY LIBRARY</a></li>
+        <li class="item-container"><a class="menu-item" href="#">HOME</a></li>
+        <li class="item-container"><a class="menu-item" href="#">MY LIBRARY</a></li>
       </ul>
   </header>
   <main>
