--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,18 @@
   </head>
 
   <body>
+  <header>
+    <nav class="top-menu">
+      <a class="navbar-logo" href="#"><img src="./images/logoFilm.png"> Filmoteka</a>
+      <ul class="menu-main">
+        <li class="item-container"><a class="menu-item" href="#">HOME</a></li>
+        <li class="item-container"><a class="menu-item" href="#">MY LIBRARY</a></li>
+      </ul>
+  </header>
     <main>
-      <input type="text" id="js-input" />
-      <div id="js-film-list"></div>
-      <button>prev</button>
-      <span>1</span>
-      <button>next</button>
     </main>
+    <footer class="footer-container">
+      <div class="js-footer">Made by GroupName</div>
+    </footer>
   </body>
 </html>
