--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
       width: 120px;
       padding: 0px;
       height: 55px;
+      margin-right: 30px;
     }
 
     .menu-item {
@@ -126,6 +127,65 @@
         font-size: 20px;
       }
     }
+
+    .button {
+      width: auto;
+      height: 50px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      text-decoration: none;
+      background-color: #f6f6f6;
+      border: 3px solid #e9e9e9;
+      border-radius: 6px;
+    }
+
+    .watched-container {
+      width: 100%;
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      vertical-align: middle;
+      background-color: white;
+      padding: 0;
+      margin: 0;
+      box-shadow: 0px 5px 5px #ebebeb;
+    }
+
+    .btn {
+      cursor: pointer;
+      width: 140px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      vertical-align: middle;
+      background-color: white;
+      color: #556270;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      text-decoration: none;
+      background-color: white;
+      border-bottom: 3px solid #556270;
+      border-left: none;
+      border-right: none;
+      border-top: none;
+    }
+
+    .btn:hover {
+      background-color: #77c1bb;
+      border: none;
+      color: white;
+
+    }
+
+    .btn.active {
+      background-color: #77c1bb;
+      border: none;
+      color: white;
+    }
   </style>
 </head>
 
@@ -141,7 +201,12 @@
   <main>
     <div id="pug-div"></div>
 
-    <button class="js-add-to-watched">ADD TO WATCHED</button>
+    <div class="watched-container">
+      <button class="btn watched-btn">Watched</button>
+      <button class="btn queue-btn">Queue</button>
+    </div>
+
+    <button class="button js-add-to-watched">ADD TO WATCHED</button>
   </main>
   <footer class="footter-container">
     <div class="js-footer">Made by GroupName</div>
