--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <nav class="top-menu">
       <a class="navbar-logo" href="#"><img src="./images/logoFilm.png">Filmoteka</a>
       <ul class="menu-main">
-        <li class="item-container"><a class="menu-item" href="#">HOME</a></li>
-        <li class="item-container"><a class="menu-item" href="#">MY LIBRARY</a></li>
+        <li class="item-container"><a class="menu-item" href="/#search">HOME</a></li>
+        <li class="item-container"><a class="menu-item" href="/#library">MY LIBRARY</a></li>
       </ul>
     </nav>
   </header>
